@@ -17,6 +17,8 @@ git-annex (7.20191231) UNRELEASED; urgency=medium
     programs that use GETCONFIG/SETCONFIG are recommended to implement it.
   * init: Avoid an ugly error message when http remote has no git-annex
     uuid configured.
+  * Support git remotes that need http basic auth to be accessed,
+    using git credential to get the password.
 
  -- Joey Hess <id@joeyh.name>  Wed, 01 Jan 2020 12:51:40 -0400
 
